Fix Sonar code smells